--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "hexo-theme-Mic_Theme"]
-	path = /themes/hexo-theme-Mic_Theme
+[submodule "themes/hexo-theme-Mic_Theme"]
+	path = themes/hexo-theme-Mic_Theme
 	url = git@github.com:miccall/hexo-theme-Mic_Theme.git
