--- a/_config_theme.yml
+++ b/_config_theme.yml
@@ -5,7 +5,7 @@
 # Head info
 head:
     favicon: "/img/logo_miccall.png"
-    keywords: miccall
+    keywords: chuangming, 创明, 创明工作室, 创明实验室, 创明软件工作室, 前端
     backgroundpic : "img/bg.jpg"
 
 Intro:
