--- a/source/_data/links.yml
+++ b/source/_data/links.yml
@@ -1,10 +1,95 @@
-# 成员1
-名称名称:
-  link: https://www.baidu.com
-  avatar: http://miccall.tech/img/ljj.png
-  descr: 描述
+﻿# 成员1
+屈磊:
+  link: https://www.github.com/FDELO1998
+  avatar: img/qulei.jpg
+  descr: 网站组
 # 成员2
-名称222:
-  link: https://www.baidu.com  
-  avatar: http://miccall.tech/img/ljj.png
-  descr: 描述
+潘徐思:
+  link: https://www.github.com/static233  
+  avatar: img/panxusi.jpg
+  descr: 软件组
+# 成员3
+范格:
+  link: https://www.github.com/FDELO1998
+  avatar: https://github.com/CMSoftware/CMSoftware.github.io/blob/master/imgs/fange.jpg?raw=true
+  descr: 网站组
+  # 成员4
+赵泽鑫:
+  link: https://www.github.com/Zhao-Hansi
+  avatar: img/zhaozexin.jpg
+  descr: 软件组
+  # 成员5
+张佳琪:
+  link: https://www.github.com/zhouzhouni
+  avatar: img/zhangjiaqi.jpg
+  descr: 网站组
+# 成员6
+韦方敏:
+  link: https://www.github.com/zhouzhouni
+  avatar: img/weifangmin.jpg
+  descr: 设计组
+ # 成员7
+周雷:
+  link: https://www.github.com/zhouzhouni
+  avatar: img/zhoulei.jpg
+  descr: 软件组
+# 成员8
+黄少丽:
+  link: https://www.github.com/zhouzhouni
+  avatar: img/huangshaoli.jpg
+  descr: 设计组
+# 成员9
+谭建国:
+  link: https://www.github.com/zhouzhouni
+  avatar: img/tanjianguo.jpg
+  descr: 软件组
+  # 成员10
+黄立群:
+  link: https://www.github.com/zhouzhouni
+  avatar: img/huangliqun.jpg
+  descr: 软件组
+ # 成员11
+钟吉浩:
+  link: https://www.github.com/zhouzhouni
+  avatar: img/zhongjihao.jpg
+  descr: 软件组
+# 成员12
+王芝丹:
+  link: https://www.github.com/zhouzhouni
+  avatar: img/wangzhidan.jpg
+  descr: 设计组
+  # 成员13
+薛潇巍:
+  link: https://www.github.com/zhouzhouni
+  avatar: img/xuexiaowei.jpg
+  descr: 网站组
+# 成员14
+崔谦:
+  link: https://www.github.com/zhouzhouni
+  avatar: img/cuiqian.jpg
+  descr: 网站组
+# 成员15
+谭娥:
+  link: https://www.github.com/zhouzhouni
+  avatar: img/tane.jpg
+  descr: 网站组
+# 成员16
+徐现雨:
+  link: https://www.github.com/zhouzhouni
+  avatar: img/xuxianyu.jpg
+  descr: 设计组
+  # 成员16
+杨洁雯:
+  link: https://www.github.com/zhouzhouni
+  avatar: img/yangjiewen.jpg
+  descr: 网站组
+  # 成员16
+齐妍:
+  link: https://www.github.com/zhouzhouni
+  avatar: img/qiyan.jpg
+  descr: 网站组
+  # 成员16
+陈婷:
+  link: https://www.github.com/zhouzhouni
+  avatar: img/chenting.jpg
+  descr: 网站组
