add the ./source/_posts/test/蒙太奇.md

--- a/source/_data/gallery.yml
+++ b/source/_data/gallery.yml
@@ -1,4 +1,25 @@
-﻿图片名称1:
-  full_link: http://miccall.tech/img/ljj.png
-  thumb_link: http://miccall.tech/img/ljj.png
-  descr: 图片描述
+﻿创明741:
+  full_link: img/1.jpg
+  thumb_link: img/1.jpg
+  descr: 我们
+
+杨老师:
+  full_link: img/杨老师.jpg
+  thumb_link: img/杨老师.jpg
+  descr: 741老大
+
+2018-黄倩华:
+  full_link: img/黄倩华.jpg
+  thumb_link: img/黄倩华.jpg
+  descr: 软萌少女
+
+2018-王浩沣:
+  full_link: img/王浩沣.jpg
+  thumb_link: img/王浩沣.jpg
+  descr: 喜欢设计的元气男神
+
+2018-刘勖阳:
+  full_link: img/刘勖阳.jpg
+  thumb_link: img/刘勖阳.jpg
+  descr: 大佬
+ 
